--- a/src/FubuMVC.Validation.IntegrationTesting/packages.config
+++ b/src/FubuMVC.Validation.IntegrationTesting/packages.config
@@ -3,20 +3,18 @@
   <package id="Bottles" version="1.0.0.441" targetFramework="net40" />
   <package id="FubuCore" version="1.0.0.225" targetFramework="net40" />
   <package id="FubuLocalization" version="0.9.5.124" targetFramework="net40" />
-  <package id="FubuMVC.Core" version="0.9.9.1377" targetFramework="net40" />
-  <package id="FubuMVC.Core.UI" version="0.9.9.120" targetFramework="net40" />
-  <package id="FubuMVC.Core.View" version="0.9.9.107" targetFramework="net40" />
-  <package id="FubuMVC.SelfHost" version="0.9.9.1377" targetFramework="net40" />
-  <package id="FubuMVC.StructureMap" version="0.9.9.1377" targetFramework="net40" />
-  <package id="FubuMVC.TestingHarness" version="0.9.9.1377" targetFramework="net40" />
+  <package id="FubuMVC.Core" version="0.9.9.1392" targetFramework="net40" />
+  <package id="FubuMVC.Core.UI" version="0.9.9.137" targetFramework="net40" />
+  <package id="FubuMVC.Core.View" version="0.9.9.116" targetFramework="net40" />
+  <package id="FubuMVC.Katana" version="0.9.9.1388" targetFramework="net40" />
+  <package id="FubuMVC.OwinHost" version="0.9.9.1388" targetFramework="net40" />
+  <package id="FubuMVC.StructureMap" version="0.9.9.1392" targetFramework="net40" />
+  <package id="FubuMVC.TestingHarness" version="0.9.9.1392" targetFramework="net40" />
   <package id="FubuTestingSupport" version="1.0.0.225" targetFramework="net40" />
   <package id="HtmlTags" version="1.2.0.145" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.SelfHost" version="4.0.20918.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="NUnit" version="2.5.10.11092" targetFramework="net40" />
+  <package id="Owin" version="1.0" targetFramework="net40" />
+  <package id="Owin.Extensions" version="0.6.4" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6" targetFramework="net40" />
   <package id="structuremap" version="2.6.3" targetFramework="net40" />
   <package id="structuremap.automocking" version="2.6.3" targetFramework="net40" />
