--- a/src/FubuMVC.Validation.IntegrationTesting/FubuMVC.Validation.IntegrationTesting.csproj
+++ b/src/FubuMVC.Validation.IntegrationTesting/FubuMVC.Validation.IntegrationTesting.csproj
@@ -43,6 +43,10 @@
     <Reference Include="FubuMVC.Core">
       <HintPath>..\packages\FubuMVC.Core.0.9.9.1392\lib\net40\FubuMVC.Core.dll</HintPath>
     </Reference>
+    <Reference Include="FubuMVC.Core.Assets, Version=0.9.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FubuMVC.Core.Assets.0.9.9.112\lib\net40\FubuMVC.Core.Assets.dll</HintPath>
+    </Reference>
     <Reference Include="FubuMVC.Core.UI">
       <HintPath>..\packages\FubuMVC.Core.UI.0.9.9.137\lib\net40\FubuMVC.Core.UI.dll</HintPath>
     </Reference>
@@ -103,6 +107,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -116,8 +121,10 @@
     <Compile Include="LoFi\IntegratedLoFiTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="remote_rule_integrated_tester.cs" />
+    <Compile Include="ServerHarness.cs" />
     <Compile Include="ValidationHarness.cs" />
     <Compile Include="ValidationTestFubuRegistry.cs" />
+    <Compile Include="validation_assets.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
