--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -134,6 +134,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessorRulesFieldSourceTester.cs" />
     <Compile Include="AjaxContinuationResolverTester.cs" />
     <Compile Include="AjaxValidationActionFilterTester.cs" />
     <Compile Include="AjaxValidationFailureHandlerTester.cs" />
