Fixes the ST suite

--- a/ripple.config
+++ b/ripple.config
@@ -26,5 +26,8 @@
     <string>FubuMVc.Core.Assets</string>
     <string>FubuMVC.Core.Assets</string>
     <string>Storyteller2</string>
+    <string>FubuMVC.Katana</string>
+    <string>FubuMVC.OwinHost</string>
+    <string>FubuDocs</string>
   </Floats>
 </ripple>
