--- a/src/FubuMVC.HelloValidation/Web.config
+++ b/src/FubuMVC.HelloValidation/Web.config
@@ -31,6 +31,12 @@
       <!-- To prevent static content from being run thru ASP.NET, we want to set runAllManagedModulesForAllRequests="false"
 			   However, UrlRoutingModel will stop working, unless you patch IIS to support extensionless routing (introduced in .NET 4)
 			   Download the patch at http://support.microsoft.com/kb/980368  -->
+      <!-- To prevent static content from being run thru ASP.NET, we want to set runAllManagedModulesForAllRequests="false"
+			   However, UrlRoutingModel will stop working, unless you patch IIS to support extensionless routing (introduced in .NET 4)
+			   Download the patch at http://support.microsoft.com/kb/980368  -->
+      <!-- To prevent static content from being run thru ASP.NET, we want to set runAllManagedModulesForAllRequests="false"
+			   However, UrlRoutingModel will stop working, unless you patch IIS to support extensionless routing (introduced in .NET 4)
+			   Download the patch at http://support.microsoft.com/kb/980368  -->
       <remove name="UrlRoutingModule" />
       <add name="UrlRoutingModule" type="System.Web.Routing.UrlRoutingModule, System.Web.Routing, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       <add name="UrlRoutingModule" type="System.Web.Routing.UrlRoutingModule, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" preCondition="managedHandler" />
