Checkpoint: Field rules now support overrides of the underlying StringToken. Fixed an issue with the backing keys of the ValidationKeys

--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -121,6 +121,7 @@
     <Compile Include="UI\InputElementModifier.cs" />
     <Compile Include="UI\IRenderingStrategy.cs" />
     <Compile Include="UI\IValidationAnnotationStrategy.cs" />
+    <Compile Include="UI\LocalizationElementModifier.cs" />
     <Compile Include="UI\MaxValueModifier.cs" />
     <Compile Include="UI\MaximumLengthModifier.cs" />
     <Compile Include="UI\MinimumLengthModifier.cs" />
