--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Remote\ValidationTargetResolverTester.cs" />
     <Compile Include="SampleInputModel.cs" />
     <Compile Include="AjaxValidationTester.cs" />
+    <Compile Include="UI\ElementLocalizationMessagesTester.cs" />
     <Compile Include="UI\MaxValueModifierTester.cs" />
     <Compile Include="UI\MinValueModifierTester.cs" />
     <Compile Include="UI\CssValidationAnnotationStrategyTester.cs" />
